; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_process_policy.c_proc_pidbackgrounded.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_process_policy.c_proc_pidbackgrounded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@PROC_NULL = common dso_local global %struct.TYPE_5__* null, align 8
@EINVAL = common dso_local global i32 0, align 4
@ESRCH = common dso_local global i32 0, align 4
@TASK_POLICY_DARWIN_BG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_pidbackgrounded(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** @PROC_NULL, align 8
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @EINVAL, align 4
  store i32 %11, i32* %3, align 4
  br label %34

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call %struct.TYPE_5__* @proc_find(i32 %13)
  store %struct.TYPE_5__* %14, %struct.TYPE_5__** %6, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** @PROC_NULL, align 8
  %17 = icmp eq %struct.TYPE_5__* %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* @ESRCH, align 4
  store i32 %19, i32* %3, align 4
  br label %34

20:                                               ; preds = %12
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @TASK_POLICY_DARWIN_BG, align 4
  %25 = call i64 @proc_get_effective_task_policy(i32 %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32*, i32** %5, align 8
  store i32 1, i32* %28, align 4
  br label %31

29:                                               ; preds = %20
  %30 = load i32*, i32** %5, align 8
  store i32 0, i32* %30, align 4
  br label %31

31:                                               ; preds = %29, %27
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %33 = call i32 @proc_rele(%struct.TYPE_5__* %32)
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %31, %18, %10
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local %struct.TYPE_5__* @proc_find(i32) #1

declare dso_local i64 @proc_get_effective_task_policy(i32, i32) #1

declare dso_local i32 @proc_rele(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
